# web4agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
examples/: example.py  read_many.py  read_one.py
src/: __init__.py  agent.py  batch.py  browser.py  cli.py  config.py  crawl4ai_reader.py  ddg_reader.py  doctor.py  fast.py  health.py  links.py  models.py  proxy.py  router.py  searx.py  server.py  utils.py  wayback_reader.py
tests/: conftest.py  test_agent.py  test_batch.py  test_browser.py  test_cli.py  test_config.py  test_crawl4ai_reader.py  test_ddg_reader.py  test_doctor.py  test_fast.py  test_health.py  test_links.py  test_models.py  test_proxy.py  test_router.py  test_searx.py  test_server.py  test_utils.py  test_wayback_reader.py
