[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webweb"
version = "0.1.0"
description = "Free, open-source, async-first web scraping toolkit for LLM agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["web scraping", "llm", "agent", "async", "httpx", "trafilatura"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx[http2]>=0.27",
    "trafilatura>=1.9",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
    "pydantic>=2.6",
    "lxml>=5.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.44",
]
crawl4ai = [
    "crawl4ai>=0.3",
]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
all = [
    "webweb[browser,crawl4ai,server]",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/your-org/webweb"
Issues = "https://github.com/your-org/webweb/issues"

[project.scripts]
webweb = "webweb.cli:main"

[tool.setuptools]
packages = ["webweb"]

[tool.setuptools.package-dir]
webweb = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
