[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "web4agent"
version = "0.2.0"
description = "Free, open-source, async-first web scraping toolkit for LLM agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["web scraping", "llm", "agent", "async", "curl_cffi", "trafilatura", "stealth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx[http2]>=0.27",
    "trafilatura>=1.9",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
    "pydantic>=2.6",
    "lxml>=5.0",
]

[project.optional-dependencies]
stealth = [
    "curl-cffi>=0.7",
    "browserforge>=1.2",
]
browser = [
    "patchright>=0.9",
    "browserforge>=1.2",
]
crawl4ai = [
    "crawl4ai>=0.3",
]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
all = [
    "web4agent[stealth,browser,crawl4ai,server]",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/lipiji/web4agent"
Issues = "https://github.com/lipiji/web4agent/issues"

[project.scripts]
web4agent = "web4agent.cli:main"

[tool.setuptools]
packages = ["web4agent"]

[tool.setuptools.package-dir]
web4agent = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
